# rust-server

./: Cargo.toml  Dockerfile  README.md  config.toml
.github/workflows/: deploy-dev.yml
src/: config.rs  controller.rs  flight_models.rs  log.rs  serialization.rs
